--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="node_modules/framework7/css/framework7.min.css" />
     <link rel="stylesheet" href="node_modules/framework7-icons/css/framework7-icons.css" />
     <!-- Path to your custom app styles-->
-    <!-- <link rel="stylesheet" href="path/to/my-app.css"> -->
+    <link rel="stylesheet" href="my-app.css"/>
   </head>
   <body>
     <!-- App root element -->
@@ -39,9 +39,106 @@
           </div>
           <div class="tabs">
             <div id="tab-1" class="page-content tab tab-active">
-              <div class="block">
-                <p></p>
-                ...
+              <div class="block-title">
+                <h2>檀木</h2>
+                <p>今日推荐</p>
+              </div>
+              <div>
+                <div data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="auto" data-centered-slides="true" 
+                  class="swiper-container swiper-init app-swiper app-swiper-auto">
+                  <!-- <div class="swiper-pagination"></div> -->
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img class="pic" src=""/>
+                      <div class="info">
+                        <h5>手串</h5>
+                        <div class="row no-gap">
+                          <div class="col-50">
+                            <p class="price color-gold">￥99</p>
+                          </div>
+                          <div class="col-50">
+                            <p class="align-right">
+                              <button class="bg-gray button button-cycle"><i class="color-gray size-20 f7-icons">bag</i></button>
+                              <button class="bg-gray button button-cycle"><i class="color-gray size-20 f7-icons">heart</i></button>
+                            </p>
+                          </div>
+                        </div>
+                      </div>                      
+                    </div>
+
+                    <div class="swiper-slide">
+                        <img class="pic" src=""/>
+                        <div class="info">
+                          <h5>手串</h5>
+                          <div class="row no-gap">
+                            <div class="col-50">
+                              <p class="price color-gold">￥99</p>
+                            </div>
+                            <div class="col-50">
+                              <p class="align-right">
+                                <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">bag</i></button>
+                                <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">heart</i></button>
+                              </p>
+                            </div>
+                          </div>
+                        </div>                      
+                      </div>
+
+                      <div class="swiper-slide">
+                          <img class="pic" src=""/>
+                          <div class="info">
+                            <h5>手串</h5>
+                            <div class="row no-gap">
+                              <div class="col-50">
+                                <p class="price color-gold">￥99</p>
+                              </div>
+                              <div class="col-50">
+                                <p class="align-right">
+                                  <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">bag</i></button>
+                                  <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">heart</i></button>
+                                </p>
+                              </div>
+                            </div>
+                          </div>                      
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img class="pic" src=""/>
+                            <div class="info">
+                              <h5>手串</h5>
+                              <div class="row no-gap">
+                                <div class="col-50">
+                                  <p class="price color-gold">￥99</p>
+                                </div>
+                                <div class="col-50">
+                                  <p class="align-right">
+                                    <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">bag</i></button>
+                                    <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">heart</i></button>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>                      
+                          </div>
+
+                          <div class="swiper-slide">
+                              <img class="pic" src=""/>
+                              <div class="info">
+                                <h5>手串</h5>
+                                <div class="row no-gap">
+                                  <div class="col-50">
+                                    <p class="price color-gold">￥99</p>
+                                  </div>
+                                  <div class="col-50">
+                                    <p class="align-right">
+                                      <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">bag</i></button>
+                                      <button class="bg-gray button button-cycle"><i class="color-gray size-18 f7-icons">heart</i></button>
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>                      
+                            </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div id="tab-2" class="page-content tab">
