--- a/category.html
+++ b/category.html
@@ -28,8 +28,8 @@
 
           <div class="toolbar tabbar">
             <div class="toolbar-inner">
-              <a href="#tab-1" class="tab-link tab-link-active"><i class="f7-icons size-25">heart</i></a>
-              <a href="./category.html" class="tab-link"><i class="f7-icons size-25">list</i></a>
+              <a href="#tab-1" class="tab-link"><i class="f7-icons size-25">heart</i></a>
+              <a href="#tab-2" class="tab-link tab-link-active"><i class="f7-icons size-25">list</i></a>
               <a href="#tab-3" class="tab-link"><i class="f7-icons size-25">bag</i></a>
               <a href="#tab-4" class="tab-link"><i class="f7-icons size-25">person</i></a>
             </div>
